--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
     <!-- Contenido del primer HTML -->
     <div id="content1" align-items: center>
         <div class="greetings">
-            <span>M</span>
+            <span>G</span>
             <span>I</span>
-            <span>C</span>
             <span>A</span>
-            <span>E</span>
-            <span>L</span>
+            <span>D</span>
             <span>A</span>
+            <span>:)</span>
+            
         </div>
         <div class="greetings">
             <span></span>
@@ -52,7 +52,7 @@
             <span></span>
         </div>
         <div class="description">
-            <span>Tengo un regalo para  TI ESPERO QUE TE GUSTE MICA !!</span>
+            <span>Tengo un regalo para  TI ESPERO QUE TE GUSTE GIAAA !!</span>
         </div>
         <div id="pantalla1" class="button">
             <button id="BotonCambiar" onclick="showContent2()">Haga Clic</button>
@@ -395,3 +395,4 @@
     </script>
 </body>
 </html>
+
